# api_mastery

./: .gitignore  .secrets.json  app.py  main.py  pyproject.toml  requirements.txt
mini_projects/: city_weather_comparison_tool.py  github_respositoty_analyzer.py  weather_app.py
mini_projects/enterprise_api_gateway/: main.py
mini_projects/github_repository_analyzer/: main.py
mini_projects/multi_service_dashboard/: main.py
notes/lessons/: city_weather_comparison_tool.md  github_respositoty_analyzer.md  json_placeholder_crud_operations_m2.md  module_1_fundamentals_http.md  weather_app.md
playground/: advanced_weather_app_m2.py  city_weather_comparison_tool.py  decorator_masterclass.py  file_uploads.py  github_respositoty_analyzer.py  json_placeholder_crud_operations_m2.py  module_1_fundamentals_http.py  practical_http_toolkit.py  requests_wraps_time.py  robustapiclient.py  sessions_optimization_m2.py  weather_app.py
src/api_mastery.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/api_mastery/clients/: OAuth_2.py  advanced_request_and_error_handling.py  api_key_client.py  basic_auth_client.py  bearer_token_client.py  environconfig.py  fastapi.py  github_api_client.py  master_blog_platform.py  rate_limiting_quota_manager.py  robust_api_client.py  secure_credential_manager.py
