[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api_mastery"
version = "0.1.0"
description = "Utilities and examples for the API Mastery course"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests"]

[tool.setuptools.packages.find]
where = ["src"]
